@@ -51,6 +51,7 @@
 - API Addition: Add NWSEResize, NESWResize, AllResize, NotAllowed and None SystemCursors
 - API Addition: GWTApplication#getJavaHeap and getNativeHeap are now supported
 - API Addition: Box2D Shape now implements Disposable
+- API Addition: Added ChainShape#clear method
 - API Addition: Addes Tooltip#setTouchIndependent; see #6758
 - API Addition: Emulate Timer#isEmpty on GWT
 - API Addition: Bits add copy constructor public Bits (Bits bitsToCpy)
